--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE260</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.8</version>
+        </dependency>
+        
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,3 +25,4 @@
         <exec.mainClass>com.mycompany.proyectofinalrentas.ProyectoFinalRentas</exec.mainClass>
     </properties>
 </project>
+
